--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- <app-apply-now-pending></app-apply-now-pending> -->
 <!-- <app-approved></app-approved>  -->
 <!-- <app-apply-now-pending></app-apply-now-pending> -->
-<router-outlet></router-outlet> 
+<!-- <router-outlet></router-outlet>  -->
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
 <!-- <app-credit-information></app-credit-information> -->
 <!-- <app-approved></app-approved>  -->
