--- a/src/app/apply-now-flow1/apply-now-flow1.component.html
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.html
@@ -35,7 +35,7 @@
     <div class="package-details">
         <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
 
-        <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current instalment is: $1,420 per month</b></p>
+        <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current installment is: $1,420 per month</b></p>
 
         <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -273,7 +273,7 @@
                 <label class="did-floating-label" style="font-size: -0.3rem;">Middle Name</label>
             </div>
             <div class="did-floating-label-content label-input w-full">
-                <input class="did-floating-input" type="text" id="dob" [(ngModel)]="dob">
+                <input class="did-floating-input" type="date" id="dob" [(ngModel)]="dob">
                 <label class="did-floating-label" style="font-size: -0.3rem;">Date of Birth</label>
             </div>
         </div>
@@ -410,7 +410,7 @@
     <div class="cs-footer-com">
         <!-- <button class="btn">CLEAR</button> -->
         <!-- <button class="btn btn-danger">Clear</button> -->
-        <button class="btn">SAVE & PROCEED</button> 
+        <button (click)="redirectToForgotPassPage()" class="btn">SAVE & PROCEED</button> 
 
     </div>  
 
