--- a/src/app/apply-now-flow1/apply-now-flow1.component.scss
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.scss
@@ -68,20 +68,18 @@
 
 }
 
-.package-details {
-    font-family: "Monts";
+ 
+
+.package-details{
+
+    margin-top: 0.5rem;
+
+    margin-left: 0.5rem;
+
     font-size: 15px;
-    font-weight: 500;
-}
 
-.package-details p {
-    display: flex;
-    justify-content: space-between;
-}
+    font-family: "Montserrat";
 
-.pd{
-    padding-left: 5px;
-    padding-right: 5px;
 }
 
  
@@ -802,7 +800,7 @@ margin: 0px;
 
   .card1{
 
-    height: 30rem;
+    // height: 30rem;
     border-radius: 8px;
     margin-left: 28.5rem;
     margin-top: 1rem;
@@ -815,7 +813,7 @@ margin: 0px;
 }
 
 .card2{
-    height: 20rem;
+    min-height: 4rem;
     border-radius: 8px;
     margin-left: 28.5rem;
     margin-top: 1rem;
