--- a/src/app/apply-now-pending/apply-now-pending.component.html
+++ b/src/app/apply-now-pending/apply-now-pending.component.html
@@ -110,3 +110,27 @@
         <button class="btn" (click)="onSubmit()">SUBMIT</button>
     </div>
 </div>
+
+
+<div *ngIf="!showCredit" class="popup-container" (click)="onCancel()">
+    <div class="popup-box">
+        <div class="popup-header">
+            <button (click)="onCancel()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M9.17004 14.8299L14.83 9.16992" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M14.83 14.8299L9.17004 9.16992" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M9 22H15C20 22 22 20 22 15V9C22 4 20 2 15 2H9C4 2 2 4 2 9V15C2 20 4 22 9 22Z"
+                        stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg></button>
+        </div>
+        <h1 class="text-uppercase popup-title">Success!</h1>
+        <div class="popup-message">
+            <p>Thank you your data has been saved and you can view it on your Dashboard/My Workspace.</p>
+        </div>
+        <div>
+            <button (click)="onOk()" class="confirm-btn">OK</button>
+        </div>
+    </div>
+</div>
+
