--- a/src/app/apply-now-pending/apply-now-pending.component.html
+++ b/src/app/apply-now-pending/apply-now-pending.component.html
@@ -21,13 +21,13 @@
             <div class="package-details">
                 <p><b>--</b> </p>
                 <p style="color: #DB2423;"><b>$14809 / month</b></p>
-                <p ><b>$8800</b></p>
-                <p >$12000</p>
-                <p >Monthly </p>
-                <p >7.9 %</p>
-                <p >$0</p>
-                <p ><b>$1,420</b></p>
-                <p >$14,420</p>
+                <p ><b>${{techDetailsParameter.tableData.financing}}</b></p>
+                <p >{{techDetailsParameter.pramData.carddetails.downpayment}}</p>
+                <p >{{techDetailsParameter.pramData.carddetails.repaymentfrequency}} </p>
+                <p >{{techDetailsParameter.pramData.carddetails.APR}}</p>
+                <p >{{techDetailsParameter.pramData.carddetails.addonInstallment}}</p>
+                <p ><b>{{techDetailsParameter.pramData.carddetails.yourfinalinstallment}}</b></p>
+                <p >{{techDetailsParameter.pramData.carddetails.yourfirstpayment}}</p>
             </div>
         </div>
     </div>
