--- a/src/app/approved/approved.component.html
+++ b/src/app/approved/approved.component.html
@@ -5,29 +5,29 @@
 
         
             <div (click)="redirect('car-sub')"  *ngFor="let car of carDetails">
-                <img class="car-card" src='../../assets/Toyota-Fortuner-110120211829 2.png'>
+                <img class="car-card" src='{{techDetailsParameter.pramData.pramData.specs.image}}'>
             </div>
         
-              <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: UNE0348</b></h5>
+              <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: {{techDetailsParameter.tableData.appID}}</b></h5>
         
             <div class="package-details">
                 <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
         
-                <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current installment is: per month</b></p>
+                <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current installment is:{{techDetailsParameter.pramData.pramData.carddetails.currentInstallment}} per month</b></p>
         
-                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance</b></p>
+                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance {{techDetailsParameter.pramData.pramData.carddetails.yourfinalinstallment}}</b></p>
         
-                <p style="font-family: 'Monts';">Down Payment</p>
+                <p style="font-family: 'Monts';">Down Payment {{techDetailsParameter.pramData.pramData.carddetails.downpayment}}</p>
         
-                <p style="font-family: 'Monts';">Repayment Frequency </p>
+                <p style="font-family: 'Monts';">Repayment Frequency {{techDetailsParameter.pramData.pramData.carddetails.currentInstallment}}</p>
         
-                <p style="font-family: 'Monts';">APR of</p>
+                <p style="font-family: 'Monts';">APR of {{techDetailsParameter.pramData.pramData.carddetails.APR}}</p>
         
-                <p style="font-family: 'Monts';">Add on (installment)</p>
+                <p style="font-family: 'Monts';">Add on (installment) {{techDetailsParameter.pramData.pramData.carddetails.addonInstallment}}</p>
         
-                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Installment is</b></p>
+                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Installment is {{techDetailsParameter.pramData.pramData.carddetails.yourfinalinstallment}}</b></p>
         
-                <p style="font-family: 'Monts';">Your first payment is</p>
+                <p style="font-family: 'Monts';">Your first payment is {{techDetailsParameter.pramData.pramData.carddetails.yourfirstpayment}}</p>
         
             </div>
         
